# abyss-machine

./: .gitignore  AGENTS.md  BOUNDARIES.md  CHANGELOG.md  DESIGN.AGENTS.md  DESIGN.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: AGENTS.md  CODEOWNERS  GITHUB_SURFACE.md  pull_request_template.md
.github/workflows/: artifact-production-evidence.yml  ci.yml  repo-validation.yml
config-templates/: AGENTS.md  README.md
docs/: AGENTS.md  PUBLICATION_BOUNDARY.md  README.md
docs/host/: LIVE_ADAPTERS.md  README.md  SUBSYSTEM_COMMANDS.md
docs/install/: README.md
docs/operations/: README.md
docs/profiles/: README.md
env/: .env.example  AGENTS.md  README.md
manifests/: AGENTS.md  README.md  artifact_signature_policy.manifest.json  bootstrap_profiles.manifest.json  public_boundary.manifest.json  repo_scaffold.manifest.json  schema_inventory.manifest.json
mechanics/: AGENTS.md  README.md
schemas/: AGENTS.md  README.md  artifact-bundle-manifest.schema.json  artifact-signature-policy.schema.json  bootstrap-report.schema.json  host-profile.schema.json  local-provenance-packet.schema.json  nervous-privacy.schema.json  storage-policy.schema.json  typing-policy.schema.json
scripts/: AGENTS.md  README.md  abyss-machine-bootstrap  ci_gate.py  generate_contract_abi_signatures.py  generate_scaffold_index.py  release_check.py  validation_lanes.py
systemd/: AGENTS.md  README.md
tests/: AGENTS.md  README.md
tools/: AGENTS.md  README.md  abyss-gemma4-e4b-harness  abyss-gemma4-spark-resident  abyss-machine-test  abyss-storage-reclaim-audit
(+447 files in other folders)
