[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abyss-machine"
version = "0.8.86"
description = "Host-machine bridge, policies, and bootstrap seed for Abyss OS integration."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Dionysus" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
yaml = [
  "PyYAML>=6"
]

[project.scripts]
abyss-machine = "abyss_machine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
